--- a/docs/de-de/modules/business-entscheidungen/pages/managing-key-figures.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/managing-key-figures.adoc
@@ -1,123 +1,58 @@
 = Kennzahlen anlegen und verwalten
-:keywords: 
+:keywords: Kennzahlen, KPI, KPIs, Geschäftskennzahlen, Unternehmenskennzahlen, Kennzahlen, Kennzahl, Statistik, Statistiken
 :author: team-app-bi
-:description: Erfahre, wie du in plentymarkets Kennzahlen anlegen und verwalten kannst.
+:description: Erfahre, wie Kennzahlen in plentymarkets angelegt und verwaltet werden.
 
-////
-TODO: Einleitung: Was sind Kennzahlen, wozu brauche ich sie, wann sollte ich sie erstellen? Am besten mit Beispiel. Zusammenhang mit BI Dashboard darstellen.
-////
+Im Online-Handel kommt es darauf an, konkurrenzfähig zu bleiben und das Wachstum deines Geschäfts zu ermöglichen. Damit du dein Business optimal ausrichten und fundierte Entscheidungen treffen kannst, benötigst du Einblick in möglichst aktuelle Daten und individuelle Statistiken.
 
-////
-TODO: #200 und #300 aus myview-dashboard.adoc entfernen. Verlinkungen überprüfen
-////
+Dazu kannst du in plentymarkets so genannte Kennzahlen nutzen. In Kombination mit dem xref:business-entscheidungen:myview-dashboard.adoc#[Dashboard] kannst du diese Daten visualisieren und hast alle für dich relevanten Informationen jederzeit im Blick.
 
-////
-TODO: Screenshot für Kennzahlen-Menü erstellen (https://wiki.plentymarkets.com/display/DOKU/Screenshots). Wie werden Spalten konfiguriert, wie funktioniert die Suche. Optionen innerhalb bereits erstellter Kennzahlen (z.B. Verwendung einsehen)
-////
+Auf dieser Handbuchseite erfährst du
+
+* <<#100, was genau Kennzahlen sind>>
+* <<#200, welche plentyBI Edition du benötigst>>
+* <<#300, wie du die notwendigen Berechtigungen für Nutzer:innen vergibst>>
+* <<#400, wie du Kennzahlen anlegst>> und
+* <<#500, wie du Kennzahlen verwaltest>>.
 
 [#100]
-== Kennzahlen anlegen
+== Was sind Kennzahlen?
 
-[IMPORTANT]
-.Kennzahlen je nach plentyBI Edition verfügbar
-====
-Manche Kennzahlen können nur angelegt werden, wenn du zuvor eine bestimmte plentyBI Edition gebucht hast. Öffne dazu das Menü *plentymarkets Logo (Start) » Mein Konto » Verträge*. Klicke auf *Vertrag bearbeiten* und gehe zum Schritt *plentyBI Edition wählen*. Hier stehen dir plentyBI Editionen mit verschiedenen Umfängen zur Auswahl. Zusätzlich wird auch beim Anlegen einer neuen Kennzahl im Menü *Einrichtung » plentyBI » Kennzahlen* pro Kennzahl angezeigt, in welcher plentyBI Edition sie enthalten ist.
-====
+Möchtest du in Echtzeit verfolgen, wie viele Aufträge in deinem plentymarkets System eingehen, wie viel Umsatz pro Verkaufskanal generiert wird oder welche Auftragsherkünfte eine besonders hohe Retourenquote generieren? All diese Informationen können Kennzahlen für dich ermitteln.
 
-Damit Daten im Dashboard angezeigt werden können, musst du zuerst entsprechende Kennzahlen anlegen.
+Kennzahlen stellen verschiedene Datensätze bereit. Somit entstehen die Werte und Daten, die du später auf dem Dashboard anzeigen und nachverfolgen kannst. Pro Kennzahl werden von deinem plentymarkets System sogenannte Dimensionen bereitgestellt. Dimensionen bestimmen, nach welchen Kriterien die Daten der Kennzahl gruppiert werden. Zusätzlich kannst du die Datenbasis mithilfe verschiedener Filter und weiterer Einstellungen so eingrenzen, wie du sie brauchst. So macht plentymarkets es dir einfach, datenbasierte Entscheidungen zu treffen.
 
-Kennzahlen erlauben dir, verschiedene Datensätze zusammenzustellen. Kennzahlen liefern somit die Basis für die Werte und Daten, die du später auf dem Dashboard anzeigen und nachverfolgen kannst. Pro Kennzahl werden von deinem plentymarkets System sogenannte Dimensionen bereitgestellt. Dimensionen bestimmen, nach welchen Kriterien die Daten der Kennzahl gruppiert werden.
-So kannst du pro Kennzahl genau eingrenzen, wie die Daten pro Kennzahl berechnet werden sollen.
+Bevor du konkrete Daten und Werte auf einem xref:business-entscheidungen:myview-dashboard.adoc#[Dashboard] grafisch aufbereiten und auswerten kannst, musst du die entsprechenden Kennzahlen in deinem plentymarkets System anlegen(add link/TODO).
 
-Kennzahlen legst du entweder im Menü *Einrichtung » plentyBI » Kennzahlen* oder direkt aus dem Dashboard heraus an. Im Folgenden werden beide Vorgehensweisen erklärt.
+[#200]
+== Passende plentyBI Edition wählen
 
-[NOTE]
-.Benutzerrechte beachten
-====
-Falls Benutzer:innen ohne Admin-Zugang zu deinem plentymarkets System Kennzahlen anlegen sollen, vergib zuerst die <<#300, notwendigen Benutzerrechte>>.
-====
+Zuerst solltest du entscheiden, welche Daten du auswerten möchtest. 
 
-[tabs]
-====
-Kennzahlen im Einrichtungsmenü anlegen::
-+
---
+Die Kennzahlen xref:business-entscheidungen:auftraege.adoc#[Aufträge], xref:business-entscheidungen:live-auftraege.adoc#[Aufträge (Live)] und xref:business-entscheidungen:umsatz.adoc#[Umsatz] sind kostenlose Standard-Kennzahlen. Das bedeutet, dass sie in deinem plentymarkets System bereits mit einigen Voreinstellungen eingerichtet sind. So kannst du schneller mit der Einrichtung starten. Du benötigst *_keine_* plentyBI Edition, um diese Kennzahlen zu nutzen. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen* und klicke auf die gewünschte Kennzahl, um die vorhandenen Einstellungen nach deinen Bedürfnissen anzupassen. Danach kannst du direkt damit beginnen, diese Kennzahlen <<#410, auf deinem Dashboard einzubinden>>. 
 
-Diese Vorgehensweise bietet sich an, wenn du viele verschiedene Kennzahlen auf einmal anlegen möchtest. <<table-create-key-figures>> enthält eine Auflistung der verfügbaren xref:business-entscheidungen:myview-dashboard.adoc#intable-keyfigure[Kennzahlen]. Klicke auf den jeweiligen Link, um detaillierte Informationen zur Einrichtung der Kennzahl und den verfügbaren Einstellungen zu erhalten.
+Um weitere Kennzahlen anzulegen, musst du zuvor die passende plentyBI Edition buchen. 
+
+Klicke auf die Links auf unserer xref:business-entscheidungen.kennzahlen.adoc#[Übersichtsseite], um pro Kennzahl zu erfahren, welche Daten geliefert werden und welche plentyBI Edition benötigt wird. Außerdem wird im Menü *Einrichtung » plentyBI » Kennzahlen* für jede Kennzahl angezeigt, in welcher plentyBI Edition sie enthalten sind.
 
 [.instruction]
-Kennzahlen im Einrichtungsmenü anlegen:
+plentyBI Edition buchen:
 
-. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen*.
-. Nimm die Einstellungen gemäß <<table-create-key-figures>> vor.
-. Speichere (terra:save[]) die Einstellungen.
-
-[[table-create-key-figures]]
-.Kennzahlen anlegen
-[cols="1,3"]
-|======
-|Einstellung |Erläuterung
-
-| *Name*
-| Gib einen Namen für die Kennzahl an.
-
-| [#intable-keyfigure]*Kennzahl*
-| Wähle die Kennzahl, die du anlegen möchtest. Eine Liste mit verfügbaren Kennzahlen findest du auf der Handbuchseite xref:business-entscheidungen:kennzahlen.adoc#[Kennzahlen].
-
-| *ID*
-| Nachdem du eine Kennzahlkonfiguration angelegt hast, wird in diesem Feld eine vom System vergebene ID angezeigt. Diese kannst du nicht bearbeiten.
-
-| *Aktualisiert am*
-| Zeitpunkt der letzten Bearbeitung der Kennzahlkonfiguration.
-
-| *Erstellt am*
-| Zeitpunkt der Erstellung der Kennzahlkonfiguration.
-
-| *Erstellt von* 
-| Benutzername der Ersteller:in der Kennzahlkonfiguration. Klicke auf das Schloss neben dem Namen, um die Kennzahlkonfiguration zu sperren. So kann nur der Benutzer, der die Konfiguration erstellt hat, Änderungen an dieser vornehmen.
-
-| *Kommentar*
-| Gib hier bei Bedarf einen Kommentar zur Kennzahl ein. Der Kommentar wird an der Kennzahl gespeichert und gibt dir und deinen Mitarbeiter:innen schnell Einblick in eventuelle Besonderheiten oder Vermerke für die Kennzahl.
-
-2+^| Bereich *Zielwerte*
-
-| [#intable-targetvalue]*für Tage und Wochen*, *für Monate*, *für Quartale*, *für Jahre*
-| Trage Zielwerte ein, die von der Kennzahl erreicht werden sollen. Je nach gewünschtem Zeitraum kannst du hier flexibel die Zielwerte eintragen, die du für die Kennzahl planst.
-
-|======
---
-
-Kennzahlen im Dashboard anlegen::
-+
---
-
-Möchtest du direkt in einem neuen oder bereits eingerichteten Dashboard Kennzahlen hinzufügen? Dann gehe wie unten beschrieben vor.
-
-[.instruction]
-Kennzahlen im Dashboard anlegen:
-
-. Öffne das Menü *plentymarkets Logo (Start) » Dashboard*.
-. Klicke auf *Ansicht bearbeiten* (terra:design_inline_edit[]). +
-→ Das Einstellungsmenü öffnet sich.
-. Platziere per Drag-and-drop ein Element aus dem Einstellungsmenü auf dem Dashboard.
-. Bewege den Mauszeiger über das Element und klicke auf (terra:design_inline_edit[]). +
-→ Das Einstellungsmenü für das Element öffnet sich.
-. Platziere per Drag-and-drop ein Element innerhalb der blau umrandeten Fläche.
-. Bewege den Mauszeiger über das Element und klicke auf (terra:design_inline_edit[]).
-. Klicke im Einstellungsmenü auf *Kennzahl* und wähle die Option *Neue Kennzahl erstellen*. +
-→ Ein Fenster zur Einrichtung der neuen Kennzahl öffnet sich.
-. Gib einen *Namen* für die Kennzahl ein.
-. Nimm die Einstellungen wie in <<table-create-key-figures>> beschrieben vor.
-. Klicke auf *Speichern* (terra:save[]).
-
-IMPORTANT: Beim Anlegen neuer Kennzahlen über das Dashboard ist es nicht möglich, xref:business-entscheidungen:myview-dashboard.adoc#intable-targetvalue[Zielwerte] für diese Kennzahlen einzugeben. Diese Einstellungen kannst du jedoch im Nachhinein im Menü *Einrichtung » plentyBI » Kennzahlen* für die entsprechende Kennzahl ergänzen.
---
-====
+. Öffne das Menü *plentymarkets Logo (Start) » Mein Konto*.
+. Klicke auf icon:file-text[role="darkGrey"] *Verträge*.
+. Klicke auf *Vertrag bearbeiten*.
+. Klicke auf icon:pencil[role="darkGrey"] *Vertrag bearbeiten*. +
+→ Der Konfigurator wird eingeblendet.
+. Klicke auf *Weiter*, bis du den Schritt *plentyBI Edition wählen* erreichst.
+. Entscheide dich für eine plentyBI Edition.
+. Klicke auf *Auswählen*.
+. Durchlaufe die restlichen Schritte des Konfigurators. +
+→ Die gewählte plentyBI Edition wird für dein System gebucht.
 
 [#300]
-=== Berechtigungen vergeben
+== Berechtigungen vergeben
 
-Bei der Arbeit mit Kennzahlen solltest du entscheiden, welche Mitarbeiter:innen welche Kennzahlen einsehen dürfen. Benutzer:innen mit Admin-Zugang zu deinem plentymarkets System können alle Kennzahlen einsehen sowie neue Kennzahlen anlegen.
+Kennzahlen geben Aufschluss über sensible Daten deines Unternehmens. Überlege daher, welche Mitarbeiter:innen welche Kennzahlen einsehen dürfen. Benutzer:innen mit Admin-Zugang zu deinem plentymarkets System können alle Kennzahlen einsehen sowie neue Kennzahlen anlegen.
 Benutzer:innen mit einem Zugang vom Typ *Backend* muss diese Berechtigung durch eine:n Benutzer:in mit Admin-Zugang erteilt werden.
 
 Gehe wie unten beschrieben vor, um festzulegen, welche Kennzahlen für welche Benutzer:innen sichtbar sein sollen.
@@ -138,12 +73,117 @@ Berechtigungen zur Ansicht von Kennzahlen erteilen:
 *_Optional:_* Klicke auf *Alle Kennzahlen*, wenn sämtliche Kennzahlen für das Benutzerkonto sichtbar sein sollen.
 . *Speichere* (terra:save[]) die Einstellungen.
 
-Du möchtest Mitarbeiter:innen ohne Admin-Zugang zum System erlauben, Kennzahlen anzulegen? Dann nimm zusätzlich noch die folgenden Einstellungen vor.
+Sollen Mitarbeiter:innen ohne Admin-Zugang Kennzahlen anzulegen? Dann nimm zusätzlich noch die folgenden Einstellungen vor.
+
+[discrete]
+==== Rechte für Backend-Benutzer:innen vergeben
+
+:rights-purpose: Kennzahlen anlegen können
+:right-one: pass:quotes[*plentyBI > Kennzahlen*]
+
+include::_includes:partial$rights.adoc[]
+
+[#400]
+== Kennzahlen anlegen
+
+Nachdem du alle oben beschriebenen Schritte befolgt hast, kannst du mit dem Anlegen der eigentlichen Kennzahlen beginnen. 
+
+[IMPORTANT]
+.Benutzerrechte beachten
+====
+Falls Benutzer:innen ohne Admin-Zugang zu deinem plentymarkets System Kennzahlen anlegen sollen, vergib zuerst die <<#300, notwendigen Benutzerrechte>>.
+====
+
+[.instruction]
+Kennzahlen anlegen:
+
+. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen*.
+. Klicke auf *Neu* (material:add[role="skyBlue"]).
+. Nimm die Einstellungen gemäß <<table-create-key-figures>> vor.
+. Speichere (terra:save[]) die Einstellungen.
+
+[[table-create-key-figures]]
+.Kennzahlen anlegen
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+2+^| Bereich *Allgemein*
+
+| *Name*
+| Gib einen Namen für die Kennzahl an.
+
+| [#intable-keyfigure]*Kennzahl*
+| Wähle die Kennzahl, die du anlegen möchtest. Nachdem du eine Kennzahl ausgewählt hast, erscheinen je nach Kennzahl weitere Felder, in denen du die gewünschte Dimension festlegen kannst. Alle verfügbaren Kennzahlen und ihre Einstellungsmöglichkeiten findest du auf der Handbuchseite xref:business-entscheidungen:kennzahlen.adoc#[Kennzahlen].
+
+2+^| Bereich *Informationen*
+
+| *ID*
+| Nachdem du eine Kennzahlkonfiguration angelegt hast, wird in diesem Feld eine vom System vergebene ID angezeigt. Die ID kannst du nicht bearbeiten.
+
+| *Aktualisiert*
+| Zeitpunkt der letzten Bearbeitung der Kennzahlkonfiguration. Den Zeitpunkt kannst du nicht bearbeiten.
+
+| *Erstellt*
+| Zeitpunkt der Erstellung der Kennzahlkonfiguration. Den Zeitpunkt kannst du nicht bearbeiten.
+
+| *Ersteller* 
+| Benutzername der Ersteller:in der Kennzahlkonfiguration. Klicke auf die Schaltfläche neben dem Schloss-Symbol (material:toggle_on[role="skyBlue"]) um die Kennzahlkonfiguration zu sperren. So kann nur der Benutzer, der die Konfiguration erstellt hat, Änderungen an der Kennzahl vornehmen.
+
+2+^| Bereich *Kommentar*
+
+| *Kommentar*
+| Gib hier bei Bedarf einen Kommentar zur Kennzahl ein. Der Kommentar wird an der Kennzahl gespeichert und gibt dir und deinen Mitarbeiter:innen schnell Einblick in eventuelle Besonderheiten oder Vermerke für die Kennzahl. Der Kommentar wird lediglich in diesem Menü angezeigt.
+
+2+^| Bereich *Filter*
+
+| *Filter*
+| Nachdem du eine <<#intable-keyfigure, Kennzahl>> ausgewählt hast, kannst du hier festlegen, wie die Daten gefiltert werden sollen. Die Filter, die pro Kennzahl zur Verfügung stehen, sind auf der jeweiligen xref:business-entscheidungen:kennzahlen.adoc#[Handbuchseite der Kennzahl] beschrieben. +
+Klicke auf material:playlist_add[role="darkGrey"], um einen Filter hinzuzufügen. Mit material:add_to_photos[role=darkGrey] kannst du für bereits gesetzte Filter weitere Verschachtelungen hinzufügen.
+
+2+^| Bereich [#intable-usage]*Verwendung*
+
+| material:info_outline[role="blue"] *Verwendung einsehen* 
+| Nachdem du eine <<#intable-keyfigure, Kennzahl>> angelegt und auf einem oder mehreren Dashboards eingebunden hast, klicke auf *Verwendung einsehen*. So kannst du eine Liste mit Dashboards, auf denen die Kennzahl verwendet wird, einsehen. Per Klick auf die einzelnen Listeneinträge gelangst du zur jeweiligen Dashboard-Ansicht. Außerdem wird dir angezeigt, wie oft die Kennzahl insgesamt verwendet wird. 
+
+2+^| Bereich *Zielwerte*
+
+| [#intable-targetvalue]*für Tage und Wochen*, *für Monate*, *für Quartale*, *für Jahre*
+| Trage Zielwerte ein, die von der Kennzahl erreicht werden sollen. Je nach gewünschtem Zeitraum kannst du hier flexibel die Zielwerte eintragen, die du für die Kennzahl planst.
+
+|====
+
+[#500]
+== Kennzahlen verwalten
+
+Nachdem du im Menü *Einrichtung » plentyBI » Kennzahlen* einige Kennzahlen angelegt hast, stehen dir weitere Funktionen zur Verfügung. Gerade wenn du zahlreiche Kennzahlen nutzt, helfen dir diese Funktionen, den Überblick zu behalten. 
+
+Die folgenden Kapitel beschreiben, wie du
+
+* <<#510, die Spalten in der Kennzahlen-Übersicht konfigurierst>>
+* <<#520, nach Kennzahlen suchst>> und
+* <<#530, die Gruppenfunktion nutzt>>.
+
+[#510]
+=== Kennzahlen-Übersicht gestalten
+
+[#520]
+=== Kennzahlen suchen
+
+[#530]
+=== Gruppenfunktion nutzen
+
+
+
+
+
+
+
 
 ////
 TODO: Einstellungen zum Import externer Kennzahlen aus Google Tabellen. Welche Berechtigungen? Welcher Login? PID- und nutzerbasierte Einschränkungen/Freigaben. Erklärungen der Optionen und Empfehlungen für Einstellungen, z.B. Datumsformat im Google Sheet
 ////
 
 ////
-TODO: Liste mit Anwendungsbeispielen, z.B. Live-Aufträge, Umsatz des letzten Monats, Absatz nach Marktplatz, Retourenquote nach Artikelkategorie
+TODO: #200 und #300 aus myview-dashboard.adoc entfernen. Verlinkungen überprüfen
 ////
