--- a/docs/de-de/modules/business-entscheidungen/pages/managing-key-figures.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/managing-key-figures.adoc
@@ -22,7 +22,7 @@ Möchtest du in Echtzeit verfolgen, wie viele Aufträge in deinem plentymarkets 
 
 Kennzahlen stellen verschiedene Datensätze bereit. Somit entstehen die Werte und Daten, die du später auf dem Dashboard anzeigen und nachverfolgen kannst. Pro Kennzahl werden von deinem plentymarkets System sogenannte Dimensionen bereitgestellt. Dimensionen bestimmen, nach welchen Kriterien die Daten der Kennzahl gruppiert werden. Zusätzlich kannst du die Datenbasis mithilfe verschiedener Filter und weiterer Einstellungen so eingrenzen, wie du sie brauchst. So macht plentymarkets es dir einfach, datenbasierte Entscheidungen zu treffen.
 
-Bevor du konkrete Daten und Werte auf einem xref:business-entscheidungen:myview-dashboard.adoc#[Dashboard] grafisch aufbereiten und auswerten kannst, musst du die entsprechenden Kennzahlen in deinem plentymarkets System anlegen(add link/TODO).
+Um konkrete Daten und Werte auf einem xref:business-entscheidungen:myview-dashboard.adoc#[Dashboard] grafisch aufzubereiten und auszuwerten, musst du die entsprechenden Kennzahlen in deinem plentymarkets System <<#400, anlegen>>.
 
 [#200]
 == Passende plentyBI Edition wählen
@@ -104,6 +104,7 @@ Kennzahlen anlegen:
 
 [[table-create-key-figures]]
 .Kennzahlen anlegen
+[width="100%"]
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
@@ -156,16 +157,49 @@ Klicke auf material:playlist_add[role="darkGrey"], um einen Filter hinzuzufügen
 [#500]
 == Kennzahlen verwalten
 
-Nachdem du im Menü *Einrichtung » plentyBI » Kennzahlen* einige Kennzahlen angelegt hast, stehen dir weitere Funktionen zur Verfügung. Gerade wenn du zahlreiche Kennzahlen nutzt, helfen dir diese Funktionen, den Überblick zu behalten. 
+Nachdem du im Menü *Einrichtung » plentyBI » Kennzahlen* einige Kennzahlen angelegt hast, stehen dir weitere Funktionen zur Verfügung. Gerade wenn du zahlreiche Kennzahlen nutzt, helfen dir diese Funktionen, den Überblick zu behalten und Informationen sinnvoll anzuordnen.
 
 Die folgenden Kapitel beschreiben, wie du
 
-* <<#510, die Spalten in der Kennzahlen-Übersicht konfigurierst>>
+* <<#510, die Kennzahlen-Übersicht gestaltest>>
 * <<#520, nach Kennzahlen suchst>> und
 * <<#530, die Gruppenfunktion nutzt>>.
 
 [#510]
 === Kennzahlen-Übersicht gestalten
+
+Die Übersicht im Menü *Einrichtung » plentyBI » Kennzahlen* kannst du individuell gestalten. So kannst du bestimmen, welche Tabellenspalten standardmäßig angezeigt werden. Auch die Anordnung der Spalten kannst du festlegen. So kannst du die Übersicht auf deine Bedürfnisse anpassen und siehst auf einen Blick alle Informationen, die für dich wichtig sind.
+
+[.instruction]
+Kennzahlen-Übersicht gestalten:
+
+. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen*.
+. Klicke auf *Spalten konfigurieren* (icon:gear[role="darkGrey"]).
+. Nimm die Einstellungen vor. Beachte die Informationen in <<table-columns-setup>>.
+
+[[table-columns-setup]]
+.Kennzahlen-Übersicht gestalten
+[width="100%"]
+[cols="1,3"]
+|====
+|Symbol |Erläuterung
+
+| icon:gear[role="darkGrey"]
+|Welche Spalten sollen in der Übersicht enthalten sein?
+
+. Klicke auf *Spalten konfigurieren* (icon:gear[role="darkGrey"]).
+. Wähle die Spalten aus (icon:check-square[role="blue"]), die angezeigt werden sollen.
+. Klicke auf *BESTÄTIGEN*.
+
+| material:drag_indicator[role="darkGrey"]
+|In welcher Reihenfolge sollen die Spalten dargestellt werden?
+
+. Klicke auf *Spalten konfigurieren* (icon:gear[role="darkGrey"]).
+. Bewege deinen Mauszeiger über einen Eintrag mit dem Symbol material:drag_indicator[role="darkGrey"]. +
+→ Dein Mauszeiger ändert seine Form (icon:arrows[role="darkGrey"]).
+. Platziere den Eintrag per Drag-and-drop an der gewünschten Stelle.
+. Klicke auf *BESTÄTIGEN*.
+|====
 
 [#520]
 === Kennzahlen suchen
