add new pcl page to navigation
- move old pcl page to bottom in orders section and add old tool
- add old pcl to eol page
- add box to old pcl page

--- a/docs/de-de/modules/business-entscheidungen/pages/eol.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/eol.adoc
@@ -16,6 +16,12 @@ Diese Übersicht ersetzt nicht den Changelog oder den in der jeweiligen Kategori
 |====
 |Bereich/Funktion |Beendigung der Softwarepflege |Beendigung der Bereitstellungfootnote:[Datum, ab wann die Funktion nicht mehr verfügbar ist] |Weitere Informationen |Datum der Bekanntgabe
 
+|*Aufträge » Paketinhaltsliste (veraltet)* 
+|07.09.2022
+|bis Q2 2023
+|link:https://forum.plentymarkets.com/t/ankuendigung-neue-paketinhaltsliste-announcement-new-package-content-list/693629[Link zum Forum^]
+|07.09.2022
+
 |[#intable-app]*plentymarkets App* 
 |- 
 |Geräte mit Android-Betriebssystem kleiner als Version 6.0 ab Mitte Oktober 2022 nicht mehr unterstützt 
