--- a/docs/en-gb/modules/business-decisions/pages/eol.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/eol.adoc
@@ -16,6 +16,12 @@ This overview does not replace the changelog or the forum thread within a partic
 |====
 |Area/function |End of software maintenance |End of provisioningfootnote:[Date from which the function is no longer available] |Further information |Announcement date
 
+|*Orders » Package content list (deprecated)* 
+|07-Sep-2022
+|until Q2 2023
+|link:https://forum.plentymarkets.com/t/ankuendigung-neue-paketinhaltsliste-announcement-new-package-content-list/693629[Link zum Forum^]
+|07-Sep-2022
+
 |[#intable-app]*plentymarkets App* 
 |- 
 |Support for devices with Android OS versions lower than 6.0 will end in Mid-October 2022
