--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -137,7 +137,6 @@
 ** xref:auftraege:auftragsherkunft.adoc[Auftragsherkunft]
 ** xref:auftraege:abonnement.adoc[Abonnement]
 ** xref:auftraege:gutscheine.adoc[Gutscheine]
-** xref:auftraege:paketinhaltsliste.adoc[Paketinhaltsliste]
 ** xref:auftraege:dokumentenarchiv.adoc[Dokumentenarchiv]
 ** xref:auftraege:new-order-ui-beta.adoc[Aufträge (beta)]
 *** xref:auftraege:preparatory-settings.adoc[Vorbereitende Einstellungen vornehmen]
@@ -158,6 +157,7 @@
 ** xref:auftraege:faq.adoc[FAQ]
 *** xref:auftraege:lieferschwellenueberschreitung.adoc[Was tun bei Überschreitung der Lieferschwelle?]
 ** xref:auftraege:scheduler.adoc[Alt: Scheduler]
+** xref:auftraege:paketinhaltsliste.adoc[Paketinhaltsliste (altes Tool)]
 * xref:payment:payment.adoc[Payment]
 ** xref:payment:zahlungsarten-verwalten.adoc[Zahlungsarten verwalten]
 ** xref:payment:beta-zahlungen-verwalten-neu.adoc[Zahlungen verwalten]
@@ -183,6 +183,7 @@
 ** xref:fulfillment:versand-center-2-0.adoc[Versand-Center 2.0 (Testphase)]
 ** xref:fulfillment:versand-center.adoc[Versand-Center nutzen]
 ** xref:fulfillment:dokumente-erzeugen.adoc[Dokumente erzeugen]
+** xref:fulfillment:paketinhaltsliste-testphase.adoc[Paketinhaltsliste (Testphase)]
 ** xref:fulfillment:amazon-fba-inbound.adoc[Amazon FBA Inbound]
 ** xref:fulfillment:clc.adoc[CLC]
 ** xref:fulfillment:ebay-fulfillment-by-orange-connex.adoc[eBay Fulfillment by Orange Connex]
