--- a/docs/de-de/modules/auftraege/pages/paketinhaltsliste.adoc
+++ b/docs/de-de/modules/auftraege/pages/paketinhaltsliste.adoc
@@ -1,4 +1,4 @@
-= Paketinhaltsliste
+= Paketinhaltsliste (altes Tool)
 :keywords: Paketinhaltsliste, Paketinhalt, Palette, Paket, ungepackte Artikel, verpackte Artikel, Purchase Order, Inbound, Einlieferungsliste
 :description: Erfahre auf dieser Handbuchseite, wie du die Paketinhaltsliste in plentymarkets verwendest.
 :icons: font
@@ -6,6 +6,12 @@
 :docinfo1:
 :id: XM4EPEE
 :author: team-fulfillment-payment
+
+[IMPORTANT]
+.Wichtig: Dieses Menü wird nicht mehr weiterentwickelt
+====
+Das Menü *Aufträge » Paketinhaltsliste (veraltet)* wird nicht mehr weiterentwickelt. Du kannst das Menü weiterhin sehen und nutzen. Erweiterungen und Neuerungen werden aber nicht mehr vorgenommen. Wir empfehlen dir, das neue Menü *Aufträge » Paketinhaltsliste (Testphase)* zu nutzen. Weitere Informationen findest du auf der Handbuchseite xref:fulfillment:paketinhaltsliste-testphase.adoc#[Paketinhaltsliste (Testphase)].
+====
 
 Auf dieser Handbuchseite erfährst du, wie du die Paketinhaltsliste in plentymarkets verwendest. Die Paketinhaltsliste gibt Auskunft über den Inhalt von Paletten, Paketen und Artikeln. Eine solche Liste ist für einen Fulfillment-Dienstleister relevant, damit dieser weiß, welche Artikel sich in den Paketen befinden, die er für dich lagert und versendet.
 
