--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -135,7 +135,6 @@
 ** xref:orders:order-referrer.adoc[Order referrer]
 ** xref:orders:subscription.adoc[Subscription]
 ** xref:orders:coupons.adoc[Coupons]
-** xref:orders:package-content-list.adoc[Package content list]
 ** xref:orders:document-archive.adoc[Document archive]
 ** xref:orders:new-order-ui-beta.adoc[Orders (beta)]
 *** xref:orders:preparatory-settings.adoc[Preparatory settings]
@@ -156,6 +155,7 @@
 ** xref:orders:faq.adoc[FAQ]
 *** xref:orders:exceeding-delivery-threshold.adoc[What to do when you exceed a delivery threshold?]
 ** xref:orders:scheduler.adoc[Old: Scheduler]
+** xref:orders:package-content-list.adoc[Package content list (Old tool)]
 * xref:payment:payment.adoc[Payment]
 ** xref:payment:managing-payment-methods.adoc[Managing payment methods]
 ** xref:payment:beta-managing-payments-new.adoc[Managing payments]
@@ -181,6 +181,7 @@
 ** xref:fulfilment:shipping-centre-2-0.adoc[Shipping centre 2.0 (Test phase)]
 ** xref:fulfilment:shipping-centre.adoc[Using the shipping centre]
 ** xref:fulfilment:generating-documents.adoc[Generating documents]
+** xref:fulfilment:package-content-list-test-phase.adoc[Package content list (Test phase)]
 ** xref:fulfilment:amazon-fba-inbound.adoc[Amazon FBA Inbound]
 ** xref:fulfilment:clc.adoc[CLC]
 ** xref:fulfilment:ebay-fulfillment-by-orange-connex.adoc[eBay Fulfillment by Orange Connex]
