--- a/docs/en-gb/modules/orders/pages/package-content-list.adoc
+++ b/docs/en-gb/modules/orders/pages/package-content-list.adoc
@@ -1,4 +1,4 @@
-= Package content list
+= Package content list (Old tool)
 :keywords: package content list, package content, pallet, package, unpacked items, packed items, purchase order, inbound, receipt, delivery list
 :description: Learn how to use the package content list in plentymarkets.
 :icons: font
@@ -6,6 +6,12 @@
 :docinfo1:
 :id: XM4EPEE
 :author: team-fulfillment-payment
+
+[IMPORTANT]
+.Important: No new features planned for this menu
+====
+The *Orders » Package content list (deprecated)* menu will not be developed any further. You can still see and use this menu. However, no new features or extensions will be implemented. We recommend using the new *Orders » Package content list (Test phase)* menu. For further information, refer to the xref:fulfilment:package-content-list-test-phase.adoc#[Package content list (Test phase)] page.
+====
 
 On this page of the manual, you find detailed information about how to use the package content list in plentymarkets. The package content list informs you about the content of pallets, packages and items. Such a list is relevant for a fulfilment service provider who stores and sends your items for you. The list informs them about which items are in the packages.
 
