fix icon and table formatting

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -315,7 +315,7 @@ Klicke in der Zeile des Ordners bzw. Unterordners, in dem du einen Footer erstel
 → Das Fenster *Neuer Name* öffnet sich.
 . Gib den Betreff für die Footer-Vorlage ein.
 . Klicke auf *Speichern*.
-. Wähle (material:check_mark[role=skyBlue]) im Bereich *Einstellungen* den Eigner und den Mandant.
+. Wähle (material:check_box[role=skyBlue]) im Bereich *Einstellungen* den Eigner und den Mandant.
 . Klicke auf *Bearbeiten* (material:edit[]).
 . Bearbeite den Footer nach deinen Wünschen und füge <<#widget-einfuegen, Widgets>> und <<#variablen-emailbuilder, Variablen>> ein.
 . *Speichere* (material:save[]) die Einstellungen.
@@ -499,7 +499,7 @@ Für jede erstellte Sprache siehst du einen eigenen Bereich. Mit einem Klick auf
 |Hier kannst du das CSS-Styling deiner Vorlage, deines Headers und deines Footers anpassen. <<#beispiele-benutzerdefiniertes-styling, In der aufklappbaren Box unterhalb dieser Tabelle>> findest du einige gängige Beispiele, wie du das Styling deiner Vorlage anpassen kannst. +
 *_Tipp:_* Speichere die Einstellungen und öffne anschließend die *Vorschau* (material:preview[]), um deine Eingaben zu prüfen und ggf. weitere Anpassungen vorzunehmen.
 
-||[#intable-template-settings-back-to-template-configuration]*Zurück zur Vorlagenkonfiguration*
+|[#intable-template-settings-back-to-template-configuration]*Zurück zur Vorlagenkonfiguration*
 |Mit einem Klick auf material:arrow_back[] ganz oben rechts gelangst du wieder zurück zu Vorlagenkonfiguration.
 
 |====
@@ -671,7 +671,7 @@ Mit einem Klick auf material:settings[] öffnen sich die Einstellungen. Hier kan
 | In diesem Widget kannst du Bilder wie z.B. dein Firmenlogo hochladen, um dieses in deinen E-Mail-Vorlagen anzuzeigen.
 
 Mit einem Klick auf material:settings[] öffnen sich die Einstellungen. Hier kannst du das Bild hochladen, die Breite und die Höhe des Bildes in px oder % angeben, einen Alternativtext eingeben, das Styling im CSS-Format anpassen und den Bild-Link angeben. +
-*_Hinweis:_* Gib bei dem Bild-Link immer `https` mit an. +
+*_Wichtig:_* Gib bei dem Bild-Link immer `https` mit an. +
 *_Tipp:_* Wenn du das Bild an eine bestimmte Position setzen möchtest, kannst du das CSS-Styling im Feld *Eigenes Styling* anpassen, z.B. `margin-left: auto; margin-right: 0; display: block;` oder `float:right;display:block;`. Weitere Informationen findest du z.B. link:https://www.w3schools.com/css/css3_images.asp[hier^] und link:https://www.caniemail.com/[hier^].
 
 Klicke auf *Einstellungen schließen* (material:close[]), um die Einstellungen zu schließen. Klicke auf *Widget löschen* (material:delete[]), um das Widget zu entfernen.
