--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -319,6 +319,30 @@ include::partial$variantenverfuegbarkeit.adoc[]
 
 // Web-API erforderlich!
 
+[#varianten-mit-katalog-kategorie-verknüpfen]
+=== Varianten mit Kaufland-Produktkategorie verknüpfen
+
+Wenn du mit dem Assistenten *Kaufland - Kataloge erstellen* ein Katalog-Format für Kaufland erstellt hast, wird in deinem plentymarkets System die Eigenschaft *Kaufland.de-Kategorie* erstellt. Mit dieser Eigenschaft legst du fest, in welcher Kategorie deine Varianten auf Kaufland angeboten werden.
+
+Im Assistenten *Kaufland - Kataloge erstellen* wählst du für jeden Katalog eine Kaufland-Produktkategorie. Jede dieser Produktkategorien wird als Auswahlwert zu der Eigenschaft *Kaufland.de-Kategorie* hinzugefügt.
+
+Damit deine Varianten in der gewünschten Kategorie auf Kaufland angeboten werden, müssen sie im Tab *Eigenschaften* der Variante mit der Eigenschaft *Kaufland.de-Kategorie* verknüpft werden. Für diese Eigenschaft wählst du dann die Produktkategorie, in der deine Varianten angeboten werden sollen.
+
+[.instruction]
+Variante mit Produktkategorie verknüpfen:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen]*.
+. Wechsele in das *Tab: Varianten*.
+. Öffne die Variante, die du verknüpfen möchtest.
+. Wechsele in das *Tab: Eigenschaften*.
+. Wähle im Bereich *Varianteneigenschaften* aus der Dropdown-Liste *Eigenschaften* die Eigenschaft *Kaufland.de-Kategorie* und klicke auf *Hinzufügen* (icon:plus-square[role="green"]). +
+→ Die Eigenschaft wird hinzugefügt.
+. Wähle für die Eigenschaft *Kaufland.de-Kategorie* aus der Dropdown-Liste *Wert* die gewünschte Kategorie. +
+→ Die Variante wird im zugehörigen Katalog exportiert. +
+*_Beispiel:_* Wählst du den Wert *T-Shirts*, wird die Variante auf Kaufland in der Kategorie *T-Shirts* angeboten.
+. Wiederhole die Schritte 5 und 6 für alle Kategorien, in denen du die Variante verkaufen möchtest.
+. Speichere (terra:save[]) die Einstellungen.
+
 [#350]
 === _Optional:_ SKU speichern
 
