--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -96,7 +96,7 @@ Für neue Kaufland-Konten, die du im *Tab: Neues Konto* hinzufügst, ist diese E
 |Wählen, ob der Artikelexport zu Kaufland.de aktiviert werden soll. +
 
 *_Hinweis:_* Du kannst diese Einstellung *deaktivieren*, wenn du deine Artikel mit <<#catalogue-export, Katalogen>> an Kaufland überträgst. +
-Stelle jedoch sicher, dass du alle Varianten, die du auf Kaufland verkaufen möchtest, mit einem Kaufland-Katalog verknüpft hast, bevor du diese Einstellung deaktivierst. Wenn die Variante nicht mit einem Kaufland-Katalog verknüpft ist, wird sie nicht zu Kaufland exportiert.
+Stelle jedoch sicher, dass du alle Varianten, die du auf Kaufland verkaufen möchtest, <<#varianten-mit-katalog-kategorie-verknüpfen, mit einem Kaufland-Katalog verknüpft hast>>, bevor du diese Einstellung deaktivierst. Wenn die Variante nicht mit einem Kaufland-Katalog verknüpft ist, wird sie nicht zu Kaufland exportiert.
 
 | *Nur Artikel mit Markierung übertragen*
 a| * *Alle Artikel* = Alle Artikel werden übertragen.
@@ -130,7 +130,7 @@ a| * *Ja* (Standardeinstellung) = Angebote werden stündlich und täglich bei Ka
 * *Nein* = Der Angebotsabgleich ist deaktiviert. +
 
 *_Hinweis:_* Du kannst diese Einstellung *deaktivieren*, wenn du deine Artikel mit <<#catalogue-export, Katalogen>> an Kaufland überträgst. +
-Stelle jedoch sicher, dass du alle Varianten, die du auf Kaufland verkaufen möchtest, mit einem Kaufland-Katalog verknüpft hast, bevor du diese Einstellung deaktivierst. Wenn die Variante nicht mit einem Kaufland-Katalog verknüpft ist, wird sie nicht zu Kaufland exportiert.
+Stelle jedoch sicher, dass du alle Varianten, die du auf Kaufland verkaufen möchtest, <<#varianten-mit-katalog-kategorie-verknüpfen, mit einem Kaufland-Katalog verknüpft hast>>, bevor du diese Einstellung deaktivierst. Wenn die Variante nicht mit einem Kaufland-Katalog verknüpft ist, wird sie nicht zu Kaufland exportiert.
 
 | *Cache-Datei generieren (Inventory)*
 a| *Ja* oder *Nein* wählen. +
