--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -322,6 +322,8 @@ include::partial$variantenverfuegbarkeit.adoc[]
 [#varianten-mit-katalog-kategorie-verknüpfen]
 === Varianten mit Kaufland-Produktkategorie verknüpfen
 
+*_Hinweis:_* Du musst deine Varianten nur mit Kaufland-Produktkategorien verknüpfen, wenn du Artikel per <<#catalogue-export, Katalogexport>> an Kaufland überträgst.
+
 Wenn du mit dem Assistenten *Kaufland - Kataloge erstellen* ein Katalog-Format für Kaufland erstellt hast, wird in deinem plentymarkets System die Eigenschaft *Kaufland.de-Kategorie* erstellt. Mit dieser Eigenschaft legst du fest, in welcher Kategorie deine Varianten auf Kaufland angeboten werden.
 
 Im Assistenten *Kaufland - Kataloge erstellen* wählst du für jeden Katalog eine Kaufland-Produktkategorie. Jede dieser Produktkategorien wird als Auswahlwert zu der Eigenschaft *Kaufland.de-Kategorie* hinzugefügt.
