--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -96,7 +96,7 @@ Für neue Kaufland-Konten, die du im *Tab: Neues Konto* hinzufügst, ist diese E
 |Wählen, ob der Artikelexport zu Kaufland.de aktiviert werden soll. +
 
 *_Hinweis:_* Du kannst diese Einstellung *deaktivieren*, wenn du deine Artikel mit <<#catalogue-export, Katalogen>> an Kaufland überträgst. +
-Stelle jedoch sicher, dass du alle Varianten, die du auf Kaufland verkaufen möchtest, mit einem Kaufland-Katalog verknüpft hast, bevor du diese Einstellung deaktivierst. Wenn die Variante nicht mit einem Kaufland-Katalog verknüpft ist, wird sie nicht zu Kaufland exportiert.
+Stelle jedoch sicher, dass du alle Varianten, die du auf Kaufland verkaufen möchtest, <<#varianten-mit-katalog-kategorie-verknüpfen, mit einem Kaufland-Katalog verknüpft hast>>, bevor du diese Einstellung deaktivierst. Wenn die Variante nicht mit einem Kaufland-Katalog verknüpft ist, wird sie nicht zu Kaufland exportiert.
 
 | *Nur Artikel mit Markierung übertragen*
 a| * *Alle Artikel* = Alle Artikel werden übertragen.
@@ -130,7 +130,7 @@ a| * *Ja* (Standardeinstellung) = Angebote werden stündlich und täglich bei Ka
 * *Nein* = Der Angebotsabgleich ist deaktiviert. +
 
 *_Hinweis:_* Du kannst diese Einstellung *deaktivieren*, wenn du deine Artikel mit <<#catalogue-export, Katalogen>> an Kaufland überträgst. +
-Stelle jedoch sicher, dass du alle Varianten, die du auf Kaufland verkaufen möchtest, mit einem Kaufland-Katalog verknüpft hast, bevor du diese Einstellung deaktivierst. Wenn die Variante nicht mit einem Kaufland-Katalog verknüpft ist, wird sie nicht zu Kaufland exportiert.
+Stelle jedoch sicher, dass du alle Varianten, die du auf Kaufland verkaufen möchtest, <<#varianten-mit-katalog-kategorie-verknüpfen, mit einem Kaufland-Katalog verknüpft hast>>, bevor du diese Einstellung deaktivierst. Wenn die Variante nicht mit einem Kaufland-Katalog verknüpft ist, wird sie nicht zu Kaufland exportiert.
 
 | *Cache-Datei generieren (Inventory)*
 a| *Ja* oder *Nein* wählen. +
@@ -318,6 +318,32 @@ Bereite nun deine Varianten vor.
 include::partial$variantenverfuegbarkeit.adoc[]
 
 // Web-API erforderlich!
+
+[#varianten-mit-katalog-kategorie-verknüpfen]
+=== Varianten mit Kaufland-Produktkategorie verknüpfen
+
+*_Hinweis:_* Du musst deine Varianten nur mit Kaufland-Produktkategorien verknüpfen, wenn du Artikel per <<#catalogue-export, Katalogexport>> an Kaufland überträgst.
+
+Wenn du mit dem Assistenten *Kaufland - Kataloge erstellen* ein Katalog-Format für Kaufland erstellt hast, wird in deinem plentymarkets System die Eigenschaft *Kaufland.de-Kategorie* erstellt. Mit dieser Eigenschaft legst du fest, in welcher Kategorie deine Varianten auf Kaufland angeboten werden.
+
+Im Assistenten *Kaufland - Kataloge erstellen* wählst du für jeden Katalog eine Kaufland-Produktkategorie. Jede dieser Produktkategorien wird als Auswahlwert zu der Eigenschaft *Kaufland.de-Kategorie* hinzugefügt.
+
+Damit deine Varianten in der gewünschten Kategorie auf Kaufland angeboten werden, müssen sie im Tab *Eigenschaften* der Variante mit der Eigenschaft *Kaufland.de-Kategorie* verknüpft werden. Für diese Eigenschaft wählst du dann die Produktkategorie, in der deine Varianten angeboten werden sollen.
+
+[.instruction]
+Variante mit Produktkategorie verknüpfen:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen]*.
+. Wechsele in das *Tab: Varianten*.
+. Öffne die Variante, die du verknüpfen möchtest.
+. Wechsele in das *Tab: Eigenschaften*.
+. Wähle im Bereich *Varianteneigenschaften* aus der Dropdown-Liste *Eigenschaften* die Eigenschaft *Kaufland.de-Kategorie* und klicke auf *Hinzufügen* (icon:plus-square[role="green"]). +
+→ Die Eigenschaft wird hinzugefügt.
+. Wähle für die Eigenschaft *Kaufland.de-Kategorie* aus der Dropdown-Liste *Wert* die gewünschte Kategorie. +
+→ Die Variante wird im zugehörigen Katalog exportiert. +
+*_Beispiel:_* Wählst du den Wert *T-Shirts*, wird die Variante auf Kaufland in der Kategorie *T-Shirts* angeboten.
+. Wiederhole die Schritte 5 und 6 für alle Kategorien, in denen du die Variante verkaufen möchtest.
+. Speichere (terra:save[]) die Einstellungen.
 
 [#350]
 === _Optional:_ SKU speichern
