--- a/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
@@ -176,5 +176,10 @@ Maßeinheit als eigenen Wert angeben:
 → Ein weiteres Datenfeld wird hinzugefügt.
 . Gib die Maßeinheit im Datenfeld *Eigener Wert* ein. +
 → Die Maßeinheit kannst du zum Beispiel als *mm*, *cm*, oder *m* angeben, je nachdem, welche Maßeinheit du übertragen willst.
+. Klicke in dem Datenfeld auf *Einstellungen* (material:settings[]). +
+→ Das Fenster *Einstellungen Datenspalten* wird geöffnet. In diesem Fenster konfigurierst du das Trennzeichen.
+. Wähle *Null* als *Ausweichbedingung*.
+. Wähle *Leerzeichen* als *Trennzeichen*.
+. *Speichere* die Einstellungen.
 . Wiederhole diese Schritte für die Datenfelder *Breite* und *Höhe*.
 ====
