fix typo DE / change description / add EN

--- a/docs/de-de/modules/business-entscheidungen/pages/kontakte.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/kontakte.adoc
@@ -24,7 +24,7 @@ include::partial$plentyBI-rohdaten-aktivieren.adoc[]
 ////
 
 [#500]
-== plentyBI ‚Edition
+== plentyBI Edition
 
 include::partial$kennzahlen-voraussetzungen-edition.adoc[]
 
@@ -46,7 +46,7 @@ include::partial$erstellungsdatum.adoc[]
 === Land
 
 :kennzahl: Die Kennzahl Kontakte
-:das-bedeutet: Bei der Berechnung wird dementsprechend das Land, aus dem die Kontakte stammen, einbezogen.
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Land einbezogen, das in der Rechnungsadresse der ersten Bestellung der Kontakte angegeben ist.
 
 include::partial$country-dimension.adoc[]
 
