add nav.adoc entries DE + EN

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -498,6 +498,7 @@
 **** xref:business-decisions:average-order-value.adoc[Average order value]
 **** xref:business-decisions:marketplace-variation-validation.adoc[Marketplace variation validation]
 **** xref:business-decisions:marketplace-stock-information.adoc[Marketplace stock information]
+**** xref:business-decisions:contacts.adoc[Contacts]
 **** xref:business-decisions:messages-key-figure.adoc[Messages]
 **** xref:business-decisions:return-rate.adoc[Return rate]
 **** xref:business-decisions:gross-revenue.adoc[Gross revenue]
