add nav.adoc entries DE + EN

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -504,6 +504,7 @@
 **** xref:business-decisions:gross-revenue.adoc[Gross revenue]
 **** xref:business-decisions:revenue.adoc[Revenue]
 **** xref:business-decisions:VAT-total.adoc[VAT total]
+**** xref:business-decisions:cloud-usage.adoc[Cloud usage]
 **** xref:business-decisions:usage.adoc[Service usage]
 **** xref:business-decisions:traffic-usage.adoc[Traffic usage]
 **** xref:business-decisions:shipping-revenue.adoc[Shipping revenue]
