update content / tip box

--- a/docs/de-de/modules/business-entscheidungen/pages/managing-key-figures.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/managing-key-figures.adoc
@@ -31,7 +31,19 @@ Um konkrete Daten und Werte auf einem xref:business-entscheidungen:myview-dashbo
 
 Zuerst solltest du entscheiden, welche Daten du auswerten möchtest. 
 
-Die Kennzahlen xref:business-entscheidungen:auftraege.adoc#[Aufträge], xref:business-entscheidungen:live-auftraege.adoc#[Aufträge (Live)] und xref:business-entscheidungen:umsatz.adoc#[Umsatz] sind kostenlose Standard-Kennzahlen. Das bedeutet, dass sie in deinem plentymarkets System bereits mit einigen Voreinstellungen eingerichtet sind. So kannst du schneller mit der Einrichtung starten. Du benötigst *_keine_* plentyBI Edition, um diese Kennzahlen zu nutzen. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen* und klicke auf die gewünschte Kennzahl, um die vorhandenen Einstellungen nach deinen Bedürfnissen anzupassen. Danach kannst du direkt damit beginnen, diese Kennzahlen <<#410, auf deinem Dashboard einzubinden>>. 
+[TIP]
+.Standard-Kennzahlen verfügbar
+====
+Die folgenden Kennzahlen sind so genannte Standard-Kennzahlen:
+
+* xref:business-entscheidungen:auftraege.adoc#[Aufträge]
+* xref:business-entscheidungen:live-auftraege.adoc#[Aufträge (Live)]
+* xref:business-entscheidungen:umsatz.adoc#[Umsatz]
+* xref:business-entscheidungen:traffic-usage.adoc#[Traffic-Verbrauch]
+* xref:business-entscheidungen:cloud-usage.adoc[Cloud-Verbrauch] 
+
+Das bedeutet, dass sie in deinem plentymarkets System bereits mit einigen Voreinstellungen eingerichtet sind. So kannst du schneller mit der Einrichtung starten. Die Nutzung dieser Kennzahlen ist für dich kostenlos. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen* und klicke auf die gewünschte Kennzahl, um die vorhandenen Einstellungen nach deinen Bedürfnissen anzupassen. Danach kannst du direkt damit beginnen, diese Kennzahlen xref:business-entscheidungen.myview-dashboard.adoc#410[auf deinem Dashboard einzubinden].
+====
 
 Um weitere Kennzahlen anzulegen, musst du zuvor die passende plentyBI Edition buchen. 
 
@@ -90,11 +102,7 @@ include::_includes:partial$rights.adoc[]
 
 Nachdem du alle oben beschriebenen Schritte befolgt hast, kannst du mit dem Anlegen der eigentlichen Kennzahlen beginnen. 
 
-[IMPORTANT]
-.Benutzerrechte beachten
-====
 Falls Benutzer:innen ohne Admin-Zugang zu deinem plentymarkets System Kennzahlen anlegen sollen, vergib zuerst die <<#300, notwendigen Benutzerrechte>>.
-====
 
 [.instruction]
 Kennzahlen anlegen:
@@ -236,9 +244,9 @@ Wenn du Kennzahlen löscht, werden die entsprechenden Daten nicht mehr in deinem
 [#530b]
 ==== Kennzahlen neu berechnen
 
-//TODO: In welchem Intervall werden Kennzahlen normalerweise berechnet?
+Die Daten deiner Kennzahlen werden täglich automatisch über Nacht aktualisiert. Brauchst du schon früher aktuelle Daten? Dann kannst du diesen Prozess manuell anstoßen.
 
-Gehe wie unten beschrieben vor, um Kennzahlen neu zu berechnen. So werden die Daten der Kennzahlen aktualisiert.
+Gehe wie unten beschrieben vor, um Kennzahlen neu zu berechnen. So werden die Daten und Ergebnisse der Kennzahlen aktualisiert.
 
 [.instruction]
 Kennzahlen neu berechnen:
