add page pagination

--- a/docs/de-de/modules/business-entscheidungen/pages/managing-key-figures.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/managing-key-figures.adoc
@@ -1,5 +1,6 @@
 = Kennzahlen anlegen und verwalten
 :keywords: Kennzahlen, KPI, KPIs, Geschäftskennzahlen, Unternehmenskennzahlen, Kennzahlen, Kennzahl, Statistik, Statistiken
+:page-pagination:
 :author: team-app-bi
 :description: Erfahre, wie Kennzahlen in plentymarkets angelegt und verwaltet werden.
 
@@ -15,7 +16,6 @@ Auf dieser Handbuchseite erfährst du
 * <<#400, wie du Kennzahlen anlegst>>
 * <<#500, wie du Kennzahlen verwaltest>> und
 * <<#600, wie du externe Kennzahlen nutzt>>.
-
 
 [#100]
 == Was sind Kennzahlen?
@@ -244,7 +244,7 @@ Wenn du Kennzahlen löscht, werden die entsprechenden Daten nicht mehr in deinem
 [#530b]
 ==== Kennzahlen neu berechnen
 
-Die Daten deiner Kennzahlen werden täglich automatisch über Nacht aktualisiert. Brauchst du schon früher aktuelle Daten? Dann kannst du diesen Prozess manuell anstoßen.
+Mit Ausnahme der Kennzahl xref:business-entscheidungen:live-auftraege.adoc[Aufträge (Live)] werden die Daten deiner Kennzahlen automatisch über Nacht aktualisiert. Brauchst du schon früher aktuelle Daten? Dann kannst du diesen Prozess manuell anstoßen.
 
 Gehe wie unten beschrieben vor, um Kennzahlen neu zu berechnen. So werden die Daten und Ergebnisse der Kennzahlen aktualisiert.
 
