--- a/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
@@ -156,7 +156,7 @@ bei mehreren Bildern:
 |===
 
 [TIP]
-.Bei Länge, Breite und Höhe Maßeinheit als eigenen Wert angeben
+.Bei Länge, Breite und Höhe Größeneinheit als eigenen Wert angeben
 ====
 In vielen Kaufland-Katalogen sind die Datenfelder *Länge*, *Breite* und *Höhe* Pflichtfelder und müssen zugeordnet werden. Dafür empfehlen wir folgende Zuordnungen:
 
@@ -164,18 +164,18 @@ In vielen Kaufland-Katalogen sind die Datenfelder *Länge*, *Breite* und *Höhe*
 * *Variante » Breite*, _Größeneinheit angeben_
 * *Variante » Höhe*, _Größeneinheit angeben_
 
-Bei diesen Datenfeldern wird nur der Wert und nicht die Größeneinheit zu Kaufland übertragen. Damit deine Varianten fehlerfrei zu Kaufland exportiert werden können, muss jedoch die Maßeinheit angegeben werden. Deshalb solltest du die Maßeinheit zusätzlich als *eigenen Wert* angeben.
+Bei diesen Datenfeldern wird nur der Wert und nicht die Größeneinheit zu Kaufland übertragen. Damit deine Varianten fehlerfrei zu Kaufland exportiert werden können, muss jedoch die Größeneinheit angegeben werden. Deshalb solltest du die Größeneinheit zusätzlich als *eigenen Wert* angeben.
 
 [.instruction]
-Maßeinheit als eigenen Wert angeben:
+Größeneinheit als eigenen Wert angeben:
 
 . Öffne das Menü *Daten » Kataloge*.
 . Öffne den Kaufland-Katalog.
 . Ordne dem Kaufland-Datenfeld *Länge* den Wert *Variante » Länge* zu.
 . Klicke auf *Datenfeld hinzufügen* (material:insert_link[]). +
 → Ein weiteres Datenfeld wird hinzugefügt.
-. Gib die Maßeinheit im Datenfeld *Eigener Wert* ein. +
-→ Die Maßeinheit kannst du zum Beispiel als *mm*, *cm*, oder *m* angeben, je nachdem, welche Maßeinheit du übertragen willst.
+. Gib die Größeneinheit im Datenfeld *Eigener Wert* ein. +
+→ Die Größeneinheit kannst du zum Beispiel als *mm*, *cm*, oder *m* angeben, je nachdem, welche Größeneinheit du übertragen willst.
 . Klicke in dem Datenfeld auf *Einstellungen* (material:settings[]). +
 → Das Fenster *Einstellungen Datenspalten* wird geöffnet. In diesem Fenster konfigurierst du das Trennzeichen.
 . Wähle *Null* als *Ausweichbedingung*.
