--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -48,26 +48,33 @@ include::_includes:partial$rights.adoc[]
 [#e-mail-server-zugangsdaten]
 === E-Mail-Server-Zugangsdaten speichern
 
-Im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* speicherst du die Zugangsdaten des E-Mail-Postfachs, aus dem du E-Mails versenden möchtest, damit dein plentymarkets System E-Mails wie Auftragsbestätigungen und Versandbestätigungen von dieser E-Mail-Adresse versenden kann.
+Im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* speicherst du die Zugangsdaten des E-Mail-Postfachs, aus dem du E-Mails versenden möchtest, damit dein plentymarkets System E-Mails wie Auftragsbestätigungen und Versandbestätigungen von dieser E-Mail-Adresse versenden kann.
 
-[.instruction]
-E-Mail-Server-Zugangsdaten speichern:
-
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten*.
-. Nimm die gewünschten Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-email-server-login-details>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
+[.collapseBox]
+.Einstellungen im Assistenten *E-Mail-Konten*
+--
 [[table-email-server-login-details]]
-.E-Mail-Server-Zugangsdaten speichern
+.E-Mail-Server-Zugangsdaten im Assistenten *E-Mail-Konten* speichern
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
 
-| *Testmodus*
-| Wähle *Aktiv* oder *Inaktiv*. +
-*Aktiv* = Der Testmodus ist aktiviert. Alle E-Mails werden nur an die eingegebene E-Mail-Adresse gesendet. So kannst du vor dem Live-Betrieb die korrekte Funktionsweise prüfen. +
-*Inaktiv* = Der Live-Modus ist aktiviert. +
-*_Wichtig:_* Der Testmodus gilt nur für diesen Webshop. Die Einstellungen für weitere Mandanten werden im Menü des Mandanten (Shops) konfiguriert.
+2+| Wie lauten die Server-Daten deines Anbieters? +
+Gib den Postausgangsserver / SMTP-Server und den Port ein und wähle die Verschlüsselungsmethode aus der Liste. Diese Daten bekommst du von deinem E-Mail-Anbieter.
+
+| *Postausgangsserver/SMTP-Server*
+|Gib den Postausgangsserver wie vom Provider angegeben ein (meist smtp.domain.de oder mail.domain.de). +
+*_mailbox.org:_* Gib für Postfächer bei mailbox.org den Postausgangsserver *smtp.mailbox.org* ein und wähle die Verschlüsselung *SSL*.
+
+| *Port (Standardport: 25)*
+|Gib den Wert *25* ein. Dieser Wert ist für fast alle Provider korrekt. Erfrage ggf. den korrekten Port beim Provider. +
+*_mailbox.org:_* Gib für Postfächer bei mailbox.org den Port *465* ein und wähle die Verschlüsselung *SSL*.
+
+| *Verschlüsselungsmethode*
+| Wähle *SSL*, *TLS* oder *keine Verschlüsselung*.  +
+*_mailbox.org:_* Gib für Postfächer bei mailbox.org den Port *465* ein und wähle die Verschlüsselung *SSL*.
+
+2+| Wie lauten die Zugangsdaten deines E-Mail-Kontos? 
 
 | *Name des Absenders*
 |Gib deinen eigenen Namen oder den Namen deines Webshops ein. Der Name wird den Empfänger:innen angezeigt. +
@@ -76,10 +83,6 @@ E-Mail-Server-Zugangsdaten speichern:
 | *E-Mail-Adresse*
 |Gib die E-Mail-Adresse ein, wie sie auch im E-Mail-Programm steht.
 
-| *Postausgangsserver/SMTP-Server*
-|Gib den Postausgangsserver wie vom Provider angegeben ein (meist smtp.domain.de oder mail.domain.de). +
-*_mailbox.org:_* Gib für Postfächer bei mailbox.org den Postausgangsserver *smtp.mailbox.org* ein und wähle die Verschlüsselung *SSL*.
-
 | *Benutzername*
 |Gib den Benutzer:innenname zu der E-Mail-Adresse ein. +
 *_mailbox.org:_* Der mailbox.org-Benutzer:innenname ist die vollständige E-Mail-Adresse des mailbox.org-Postfachs.
@@ -87,26 +90,36 @@ E-Mail-Server-Zugangsdaten speichern:
 | *Passwort*
 |Gib das Passwort zu dem Benutzer:innenname und der E-Mail-Adresse ein.
 
-| *Port (Standardport: 25)*
-|Gib den Wert *25* ein. Dieser Wert ist für fast alle Provider korrekt. Erfrage ggf. den korrekten Port beim Provider. +
-*_mailbox.org:_* Gib für Postfächer bei mailbox.org den Port *465* ein und wähle die Verschlüsselung *SSL*.
+2+|Möchtest du den E-Mail-Versand jetzt testen? +
+Mit einem Klick auf material:outgoing_mail[] wird eine Test-E-Mail an die oben eingegebene E-Mail-Adresse gesendet.
 
-| *Verschlüsselung*
-| Wähle *SSL*, *TLS* oder *keine Verschlüsselung*.  +
-*_mailbox.org:_* Gib für Postfächer bei mailbox.org den Port *465* ein und wähle die Verschlüsselung *SSL*.
+2+|Möchtest du den Live-Modus aktivieren? +
+Während der Einrichtung ist der Live-Modus deaktiviert. Das heißt, ausgehende E-Mails werden nur an die oben eingegebene E-Mail-Adresse gesendet, damit du den E-Mail-Versand testen kannst. Wenn du mit dem Einrichten deines Systems fertig bist, solltest du den Live-Modus aktivieren, damit E-Mails an deine Kund:innen gesendet werden können.
+
+|(material:check_box_outline_blank[])
+|Wenn du kein Häkchen bei *Live-Modus aktivieren* setzt (material:check_box_outline_blank[]), ist der Testmodus aktiviert. + Alle E-Mails werden nur an die eingegebene E-Mail-Adresse gesendet. So kannst du vor dem Live-Betrieb die korrekte Funktionsweise prüfen. +
+*_Wichtig:_* Der Testmodus gilt nur für diesen Webshop. Die Einstellungen für weitere Mandanten werden im Menü des Mandanten (Shops) konfiguriert.
+
+|(material:check_box[role=skyBlue])
+|Wenn du ein Häkchen bei *Live-Modus aktivieren* setzt (material:check_box[role=skyBlue]), ist der Live-Modus aktiviert.
 
 |====
+--
+
+//// 
+TODO: prüfen, ob diese Box hier bleiben soll
 
 [TIP]
 .Newsletter-Zugangsdaten eingeben
 ====
 Wenn du Newsletter an deine Kund:innen versenden möchtest, gibst du die Zugangsdaten im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Newsletter* ein. Weitere Informationen dazu findest du auf der Handbuchseite xref:crm:newsletter-versenden.adoc#[Newsletter] im Kapitel xref:crm:newsletter-versenden.adoc#200[Newsletter-Zugangsdaten eingeben].
 ====
+////
 
 [#e-mail-signatur]
 === E-Mail-Signatur speichern
 
-Im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* speicherst du deine Signatur, die dann in deinen E-Mail-Vorlagen automatisch eingefügt wird, wenn du die entsprechende Variable in der Vorlage eingefügt hast.
+Im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* speicherst du deine Signatur, die dann in deinen E-Mail-Vorlagen automatisch eingefügt wird, wenn du die entsprechende Variable in der Vorlage eingefügt hast.
 
 [IMPORTANT]
 .Priorität der Signatur beachten
@@ -115,9 +128,14 @@ Die im Benutzerkonto im Menü *Einrichtung » Einstellungen » Benutzer » Konte
 *_Das bedeutet:_* Wenn du z.B. die Variable `Signatur im HTML-Format` in die Vorlage einfügst, wird die Signatur aus dem Benutzer:innenkonto übernommen. Wenn keine Signatur im Benutzer:innenkonto gespeichert ist, wird die Signatur, die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* gespeichert ist, übernommen.
 ====
 
-// TODO: Prüfen -> Wenn du die Variable `Signatur im reinen Textformat` in die E-Mail-Vorlage einfügst, wird immer die Signatur, die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* gespeichert ist, übernommen.
+// TODO: Prüfen -> Wenn du die Variable `Signatur im reinen Textformat` in die E-Mail-Vorlage einfügst, wird immer die Signatur, die du im Assistenten gespeichert ist, übernommen.
 
-// TODO: Prüfen -> Infodienst hier auch erwähnen?
+[#e-mail-infodienst]
+=== E-Mail-Infodienst einrichten
+
+Du kannst im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* einstellen, dass alle von deinem plentymarkets System ausgehenden E-Mails auf eine von dir gewählte E-Mail-Adresse als blinde Kopie (BCC) versendet werden. Besonders in der Anfangsphase deines Webshops erhältst du so eine gute Kontrolle über alle versendeten E-Mails und kannst erkennen, wo du Prozesse noch optimieren musst. Du kannst in diesem Menü auch einstellen, dass du bei Bestellungen automatisch eine Info-E-Mail erhältst.
+
+// TODO: hier auch die einzelnen Optionen aus dem Assistenten in einer Tabelle innerhalb einer collapseBox aufführen.
 
 [#ordner-verwalten]
 == Ordner verwalten
