--- a/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
@@ -154,3 +154,32 @@ for several images:
 | yes
 | * *Item » Manufacturer name*
 |===
+
+[TIP]
+.Specify size unit as own value for length, width, and height
+====
+In many Kaufland catalogues, the data fields *Length*, *Width*, and *Height* are mandatory and have to be mapped. We recommend the following mappings for these data fields:
+
+* *Variation » Length*, _specify size unit_
+* *Variation » Width*, _specify size unit_
+* *Variation » Height*, _specify size unit_
+
+For these data fields, only the value is transferred to Kaufland. The size unit is not transferred to Kaufland. However, in order for your variations to be correctly exported to Kaufland, you have to specify the size unit. You should therefore additionally specify the size unit as an *own value*.
+
+[.instruction]
+Specifying the size unit as own value:
+
+. Go to *Data » Catalogues*.
+. Open the Kaufland catalogue.
+. Map the Kaufland data field *Length* with the value *Variation » Length*.
+. Click on *Add data field* (material:insert_link[]). +
+→ Another data field is added.
+. Enter the size unit in the data field *Own value*. +
+→ For example, you can enter *mm*, *cm*, or *m*, depending on which size unit you want to transfer.
+. Click on the *Settings* (material:settings[]) for this data field. +
+→ The window *Data column settings* opens. Here you can configure the separator.
+. Select *Null* as *Fallback condition*.
+. Select *Space* as *Separator*.
+. *Save* the settings.
+. Repeat the steps above for the data fields *Width* and *Height*.
+====
